--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -46,6 +46,8 @@ set -g @plugin 'niksingh710/minimal-tmux-status'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
+set-option -g history-limit 5000
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
