--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -48,6 +48,9 @@ set -g @continuum-restore 'on'
 
 set-option -g history-limit 5000
 
+set -g set-clipboard on
+set -ga terminal-overrides ',xterm-256color:Ms=\E]52;c;%p1%s\007'
+set -as terminal-features 'xterm-*:clipboard'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
