--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,6 +14,9 @@ bind - split-window -v
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
+unbind [
+bind ö copy-mode
+
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
